--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -121,7 +121,7 @@
               <a href="{{this.class_id}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
               <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
               <a href="group/schedule"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
-              <a href="classes/delete"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
+              <a href="class/delete/{{this.classid}}"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
             </li>
           </ul>
         </div>
