--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
         <div id="prof">
           <a href="/user/profile">
             <div id="drawerProfPic">
-              <img id="drawerImage" src="/imgs/users/{{userId}}.jpg">
+              <img id="drawerImage" src="/imgs/users/{{userID}}.jpg">
             </div>
             <div id="drawerName">{{fname}} {{lname}}</div>
           </a>
