--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -116,9 +116,9 @@
           <div id="extend{{@index}}">
           <ul>
             <li>
-              <a href="{{this.class_id}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
+              <a href="/class/{{this.classid}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
               <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
-              <a href="group/schedule"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
+              <a href="group/schedule/{{this.classid}}"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
               <a href="classes/delete"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
             </li>
           </ul>
