--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -90,9 +90,45 @@
         <p1>{{num}}</p1>
       </ul>
       <ul id="eventsAndPosts">
-      {{#each content}}
-        <li><a href="content">{{this}}</a></li>
-      {{/each}}   
+      <table >      
+      <tr>
+        <th>
+          Name
+        </th>
+        <th>
+          Date
+        </th>
+        <th>
+          Description
+        </th>
+        <th>
+          Location
+        </th>
+        <th>
+          Creator
+        </th>
+      </tr>
+      {{#each events}}
+      <tr>
+        <td>
+          {{this.title}}
+        </td>
+        <td>
+          {{this.date}} 
+          <!-- Date too long, someone shorten it somehow -->
+        </td>
+        <td>
+          {{this.description}}
+        </td>
+        <td>
+          {{this.location}}
+        </td>
+        <td>
+          {{this.name}}
+        </td>
+      </tr>
+      {{/each}}
+      </table>
       </ul> 
       </div>
   </div>
