--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -84,7 +84,7 @@
       <div id="tp">
       <ul id="nav">
         <li><a href="">+ Post</a></li>
-        <li><a href="schedule/{{this.classid}}">+ Event</a></li>
+        <li><a href="/group/schedule/{{this.classid}}">+ Event</a></li>
         <li><a href="">Students</a></li>
         <li><a href="">Description</a></li>
         <p1>{{num}}</p1>
