Fixed crashing error for class views

--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -90,7 +90,7 @@
         <p1>{{num}}</p1>
       </ul>
       <ul id="eventsAndPosts">
-     <!-- <table >      
+     <table >      
       <tr>
         <th>
           Name
@@ -116,7 +116,7 @@
         <td>
           {{this.date}} 
           <!-- Date too long, someone shorten it somehow -->
-       <!-- </td>
+        </td>
         <td>
           {{this.description}}
         </td>
@@ -128,7 +128,7 @@
         </td>
       </tr>
       {{/each}}
-      </table> -->
+      </table> 
       </ul> 
       </div>
   </div>
