Minor update to index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -71,7 +71,7 @@
     <!-- add class dropdown -->
     <div id="addclassdropdown">
        <center>
-         <div id="f1">
+         <div id="form">
             <form method="post" action="/user/addClass">
               <select name="values" onchange="showForm()">
                 <!-- BEGIN LIST -->
