--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -45,7 +45,7 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        width: 25%;
+        width: 100%;
         background-color: #f1f1f1;
         position: fixed;
         margin-top: 50px;
@@ -56,13 +56,19 @@
     #eventsAndPosts li a {
         display: block;
         color: #000;
-        padding: 8px 0 8px 16px;
+        padding: 10px 0 10px 20px;
         text-decoration: none;
     }
 
     #eventsAndPosts li a:hover{
-        background-color: #555;
+        background-color: #4CAF50;
         color: white;
+    }
+
+    #arrow{
+      float: right;
+      font-size: 20px;
+      padding-right: 15px;
     }
     </style>
 
@@ -90,45 +96,9 @@
         <p1>{{num}}</p1>
       </ul>
       <ul id="eventsAndPosts">
-     <table >      
-      <tr>
-        <th>
-          Name
-        </th>
-        <th>
-          Date
-        </th>
-        <th>
-          Description
-        </th>
-        <th>
-          Location
-        </th>
-        <th>
-          Creator
-        </th>
-      </tr>
-      {{#each events}}
-      <tr>
-        <td>
-          {{this.title}}
-        </td>
-        <td>
-          {{this.date}} 
-          <!-- Date too long, someone shorten it somehow -->
-        </td>
-        <td>
-          {{this.description}}
-        </td>
-        <td>
-          {{this.location}}
-        </td>
-        <td>
-          {{this.name}}
-        </td>
-      </tr>
-      {{/each}}
-      </table> 
+        {{#each events}}
+           <li><a href="content"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+        {{/each}}   
       </ul> 
       </div>
   </div>
