fixing html in schedule handlebars

--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -74,8 +74,6 @@
 
   </head>
 
-
-
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
@@ -83,23 +81,20 @@
     </div>
   </div>
 
-
-
-
   <div id="cont">
       <div id="tp">
-      <ul id="nav">
-        <li><a href="">+ Post</a></li>
-        <li><a href="/group/schedule/{{this.classid}}">+ Event</a></li>
-        <li><a href="">Students</a></li>
-        <li><a href="">Description</a></li>
-        <p1>{{num}}</p1>
-      </ul>
-      <ul id="eventsAndPosts">
-        {{#each events}}
-           <li><a href="content"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
-        {{/each}}   
-      </ul> 
+        <ul id="nav">
+          <li><a href="">+ Post</a></li>
+          <li><a href="/group/schedule/{{classid}}">+ Event</a></li>
+          <li><a href="">Students</a></li>
+          <li><a href="">Description</a></li>
+          <p1>{{num}}</p1>
+        </ul>
+        <ul id="eventsAndPosts">
+          {{#each events}}
+             <li><a href="content"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+          {{/each}}   
+        </ul> 
       </div>
   </div>
 </html>
