--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="../css/createpost.css" />
-    <link rel="stylesheet" type="text/css" href="../css/schedule.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/schedule.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
@@ -13,33 +13,31 @@
     </div>
   </div>
   
-  <div class="content"></div>
-    <div id="cont">
-      <div id="tp">
-        <center><p>{{message}}</p></center>
-        <form method="post" id="schedule" action="/group/createEvent/{{classid}}">
-          <label><b>{{title}}</b></label><br>
-          <input type="text" id="inputholder" name="title" placeholder="event title: Eg - 'Anyone want to meet up to work on Homework 4?'"><br>
-          <input type="text" id="inputholder" name="description" placeholder="description: Eg - 'Work on Algorithms Homework 4 and discuss Graph Theory'"><br>
-          <input type="text" id="inputholder" name="location" placeholder="location: Eg - 'Learning Commons, TBL 25, W.E.B Du Bois Library'"><br>
-          <label id="basic">Date:</label>
-          <input type="date" name="date" required><br>
-          <label id="basic">Time:</label>
-          <input type="time" name="time" required><br>
-          <label id="basic">Post as:</label>
-          <select name="anonymity">
-            <option value="anonymous">Anonymous</option>
-            <option value={{fname}}>{{fname}}</option>
-          </select><br><br>
-          <button id="createbutton">Create</button>
-        </form>
+  <div id="cont">
+    <div id="tp">
+      <center><p>{{message}}</p></center>
+      <form method="post" id="schedule" action="/group/createEvent/{{classid}}">
+        <label><b>{{title}}</b></label><br>
+        <input type="text" id="inputholder" name="title" placeholder="event title: Eg - 'Anyone want to meet up to work on Homework 4?'"><br>
+        <input type="text" id="inputholder" name="description" placeholder="description: Eg - 'Work on Algorithms Homework 4 and discuss Graph Theory'"><br>
+        <input type="text" id="inputholder" name="location" placeholder="location: Eg - 'Learning Commons, TBL 25, W.E.B Du Bois Library'"><br>
+        <label id="basic">Date:</label>
+        <input type="date" name="date" required><br>
+        <label id="basic">Time:</label>
+        <input type="time" name="time" required><br>
+        <label id="basic">Post as:</label>
+        <select name="anonymity">
+          <option value="anonymous">Anonymous</option>
+          <option value={{fname}}>{{fname}}</option>
+        </select><br><br>
+        <button id="createbutton">Create</button>
+      </form>
 
-        <center>
-          {{#each event}}
-            
-          {{/each}}
-        </center>
-      </div>
+      <center>
+        {{#each event}}
+          
+        {{/each}}
+      </center>
     </div>
   </div>
 </html>
