--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,7 +11,7 @@
       </script>
     </script> -->
 
-    <link type="text/css" rel="stylesheet" href="../css/profile.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/profile.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
