--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="schedule.css" />
+    <link rel="stylesheet" type="text/css" href="/css/schedule.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
