--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="dist/css/jquery.mmenu.all.css" />
-    <link type="text/css" rel="stylesheet" href="../css/team.css">
+    <link type="text/css" rel="stylesheet" href="/css/team.css">
   </head>
 
   <div id="page">
