Added view for individual events and implemented query strings for various pages

--- a/views/member.handlebars
+++ b/views/member.handlebars
@@ -23,7 +23,7 @@
 
         <div id="panel1">
           <ul id="test">
-            <img src="../imgs/logo.png" width="350px" height="210px">
+            <img src="/imgs/logo.png" width="350px" height="210px">
             <center><p4><b>"Work alone no more"</b></p4></center>
           </ul>
         </div>
