--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -17,7 +17,7 @@
 
       <div id="panel1">
         <ul id="test">
-          <center><img src="../imgs/logo.png" width="350px" height="210px"></center>
+          <center><img src="/imgs/logo.png" width="350px" height="210px"></center>
           <center><p4><b>Create an account. It's free!</b></p4></center>
           </div>
         </ul>
