--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -23,20 +23,20 @@
 
     <div id="panel1">
         <ul id="test">
-          <center><img src="../imgs/logo.png" width="350px" height="210px"></center>
+          <center><img src="/imgs/logo.png" width="350px" height="210px"></center>
           <center><p4><b>"Work alone no more"</b></p4></center>
         </ul>
       </div>
 
+      <a id="boxlinks" href="/admin/users">
+        <div class="linkText">
+          All Users
+        </div>
+      </a>
+      
       <a id="boxlinks" href="/admin/online">
         <div class="linkText">
           Online Users
-        </div>
-      </a>      
-
-      <a id="boxlinks" href="/admin/users">
-        <div class="linkText">
-          Flagged Users
         </div>
       </a>
 
