--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -16,14 +16,14 @@
     <div id="tp">
       <ul id="nav">
         <li><a href="">+ Post</a></li>
-        <li><a href="/group/schedule/{{classid}}">+ Event</a></li>
+        <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
         <li><a href="">Students</a></li>
         <li><a href="">Description</a></li>
         <p1>{{num}}</p1>
       </ul>
       <ul id="eventsAndPosts">
         {{#each events}}
-           <li><a href="content"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+           <li><a href="/class/content?classid={{classid}}&eid={{eid}}"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
         {{/each}}   
       </ul> 
     </div>
