--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <html>
   <!-- BEGIN HEAD -->
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- BEGIN SCRIPT FOR ADD CLASS TOGGLE -->
@@ -100,7 +100,7 @@
         <!-- RENDERS UNIQUE CLASS DIVS -->
           <ul id="class{{@index}}">
             <div id="classname">
-              <p1><a href="/class/{{this.classid}}">{{this.num}}</a></p1>
+              <p1><a href="/class?classid={{this.classid}}">{{this.num}}</a></p1>
             </div>
 
             <div id="students">
@@ -118,10 +118,10 @@
           <div id="extend{{@index}}">
           <ul>
             <li>
-              <a href="/class/{{this.classid}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
+              <a href="/class?classid={{this.classid}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
               <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
-              <a href="group/schedule/{{this.classid}}"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
-              <a href="class/delete/{{this.classid}}"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
+              <a href="/group/schedule?classid={{this.classid}}"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
+              <a href="/class/delete?classid={{this.classid}}"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
 
             </li>
           </ul>
