--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<!-- fix for menu that shows up even when logged out -->
-<style>
-  #prof{
-    display: none;
-  }
-
-  #onlyWhenLoggedIn{
-    display: none;
-  }
-</style>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/login.css"/>
+  </head>
 
   <div id="page">
     <div class="header">
@@ -30,7 +23,7 @@
 
       <div id="panel1">
         <ul id="test">
-          <center><img src="../imgs/logo.png" width="350px" height="210px"></center>
+          <center><img src="/imgs/logo.png" width="350px" height="210px"></center>
           <center><p4><b>"Work alone no more"</b></p4></center>
         </ul>
       </div>
