--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,7 +25,7 @@
   	{{#each data}}
       <div id="tp">
 	     <div id="profilepicture">
-	     	<center><img id="studentImage" src="../imgs/users/{{this.spireid}}.jpg" alt="{{this.fname}}"></center>
+	     	<center><img id="studentImage" src="/imgs/users/{{this.spireid}}.jpg" alt="{{this.fname}}"></center>
 	     </div>
 	     <div id="details">
 	     <center><ul>
