--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -29,7 +29,7 @@
         </div>
     
         {{#each members}}
-        <div class="memberName"><a href="/team/{{this.fname}}">{{this.fname}} {{this.lname}}</a></div>
+        <div class="memberName"><a href="/team?dev={{this.fname}}">{{this.fname}} {{this.lname}}</a></div>
         <div class="positionClass">{{this.role}}</div>
         <div class="Description">{{this.description}}</div> 
         {{/each}}
