Added individual events page

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -11,5 +11,11 @@
     </div>
   </div>
   
-  {{data}}
+  {{data.name}} <br>
+  {{data.title}} <br>
+  {{data.description}} <br>
+  {{data.location}} <br>
+  {{data.date}} <br>
+  {{data.classid}} <br>
+  {{data.eid}}
 </html>
