--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -14,18 +14,23 @@
 
   <div id="cont">
     <div id="tp">
-      <ul id="nav">
-        <li><a href="">+ Post</a></li>
-        <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
-        <li><a href="">Students</a></li>
-        <li><a href="">Description</a></li>
-        <p1>{{num}}</p1>
-      </ul>
-      <ul id="eventsAndPosts">
-        {{#each events}}
-           <li><a href="/class/content?classid={{classid}}&eid={{eid}}"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
-        {{/each}}   
-      </ul> 
+        <ul id="nav">
+          <li><a href="">+ Post</a></li>
+          <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
+          <li><a href="">Students</a></li>
+          <li><a href="">Description</a></li>
+          <p1>{{num}}</p1>
+        </ul> 
+        <ul id="events">
+          {{#each events}}
+             <li><a href="/class/content?classid={{classid}}&eid={{eid}}"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+          {{/each}}
+        </ul>
+        <ul id="posts">
+          {{#each posts}}
+             <li><a href="/class/content?classid={{classid}}&pid={{pid}}"><i id="pencil" class="icon fa fa-pencil-square-o fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.spireid}} </i>posted on for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+          {{/each}}   
+        </ul>
     </div>
   </div>
 </html>
