Added students view under each class

--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -17,7 +17,7 @@
       <ul id="nav">
         <li><a href="">+ Post</a></li>
         <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
-        <li><a href="">Students</a></li>
+        <li><a href="/class/students?classid={{classid}}">Students</a></li>
         <li><a href="">Description</a></li>
         <p1>{{num}}</p1>
       </ul>
