profile routing to any user now works

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -106,7 +106,9 @@
             <div id="students">
             {{#each students}}
               <div id="studentBody">  
-                <img id="studentImage" src="imgs/users/{{this}}.jpg" alt="{{this}}">
+                <a href="/user/profile/{{this}}">
+                  <img id="studentImage" src="imgs/users/{{this}}.jpg" alt="{{this}}">
+                </a>
               </div>
               {{/each}}
             </div>
