--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
       <ul>
         <!-- USER PICTURE HERE -->
         <div id="prof">
-          <a href="/user/profile">
+          <a href="/user/profile/{{userID}}">
             <div id="drawerProfPic">
               <img id="drawerImage" src="/imgs/users/{{userID}}.jpg">
             </div>
