--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -2,6 +2,42 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <style>
+    #nav {
+      width: 100%;
+      position: relative;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    #nav li {
+      float: left;
+    }
+
+    #nav li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    #nav li a:hover:not(.active) {
+      background-color: #111;
+      background-color: #2878d8;
+    }
+
+    #nav p1{
+      text-align: right;
+      right: 0;
+      float: right;
+      padding: 14px 16px;
+      font-size: 15px;
+      color: white;
+    }
+    </style>
   </head>
 
   <div id="page">
@@ -10,8 +46,20 @@
         Zembo
     </div>
   </div>
+
+    <div id="cont">
+    <div id="tp">
+      <ul id="nav">
+        <li><a href="">+ Post</a></li>
+        <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
+        <p1>{{data.title}} - <i>{{data.name}}</i></p1>
+      </ul> 
+      <ul>
+        <li><a href="/class/content?classid={{classid}}&eid={{eid}}"><i id="calendar" class="icon fa fa-calendar fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>scheduled for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+      </ul>
+    </div>
+  </div>
   
-  {{data.name}} <br>
   {{data.title}} <br>
   {{data.description}} <br>
   {{data.location}} <br>
