Added posting function for classes

--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -28,10 +28,10 @@
           <p>{{message}}</p>
            <form method="post" action="/user/register">
               <select name="year">
-                <option value="freshman">freshman</option>
-                <option value="sophomore">sophomore</option>
-                <option value="junior">junior</option>
-                <option value="senior">senior</option>
+                <option value="freshman">Freshman</option>
+                <option value="sophomore">Sophomore</option>
+                <option value="junior">Junior</option>
+                <option value="senior">Senior</option>
               </select><br>
               <input type="text" name="fname" placeholder="first name" required><br> 
               <input type="text" name="lname" placeholder="last name" required><br>
