--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -15,8 +15,8 @@
   <div id="cont">
     <div id="tp">
       <ul id="nav">
-        <li><a href="">+ Post</a></li>
-        <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
+        <li><a href="/group/createPost?classid={{classid}}">+ Post</a></li>
+        <li><a href="/group/createEvent?classid={{classid}}">+ Event</a></li>
         <p1>{{num}}</p1>
       </ul> 
       <ul id="events">
@@ -26,7 +26,7 @@
       </ul>
       <ul id="posts">
         {{#each posts}}
-           <li><a href="/class/content?classid={{classid}}&pid={{pid}}"><i id="pencil" class="icon fa fa-pencil-square-o fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.spireid}} </i>posted on for {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
+           <li><a href="/class/content?classid={{classid}}&pid={{pid}}"><i id="pencil" class="icon fa fa-pencil-square-o fa-1x"></i> <b>{{this.title}}</b> - <i>{{this.name}} </i>posted on {{this.date}} <i id="arrow" class="fa fa-arrow-right"></i></a></li>
         {{/each}}   
       </ul>
     </div>
