--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/schedule.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/group.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
@@ -15,7 +15,6 @@
 
   <div id="cont"> <!-- OPEN CONT -->
     <div id="tp"> <!-- OPEN TP -->
-
       <center><p>{{message}}</p></center>
 
       <!-- OPEN FORM -->
