Moved event styling to css file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -106,7 +106,7 @@
             <div id="students">
             {{#each students}}
               <div id="studentBody">  
-                <a href="/user/profile/{{this}}">
+                <a href="/user/profile?spireid={{this}}">
                   <img id="studentImage" src="imgs/users/{{this}}.jpg" alt="{{this}}">
                 </a>
               </div>
