--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,43 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="/css/event.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <style>
-    #nav {
-      width: 100%;
-      position: relative;
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #333;
-    }
-
-    #nav li {
-      float: left;
-    }
-
-    #nav li a {
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    #nav li a:hover:not(.active) {
-      background-color: #111;
-      background-color: #2878d8;
-    }
-
-    #nav p1{
-      text-align: right;
-      right: 0;
-      float: right;
-      padding: 14px 16px;
-      font-size: 15px;
-      color: white;
-    }
-    </style>
   </head>
 
   <div id="page">
