--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,9 +28,9 @@
       <ul>
         <!-- USER PICTURE HERE -->
         <div id="prof">
-          <a href="/user/profile/{{userID}}">
+          <a href="/user/profile?spireid={{spireid}}">
             <div id="drawerProfPic">
-              <img id="drawerImage" src="/imgs/users/{{userID}}.jpg">
+              <img id="drawerImage" src="/imgs/users/{{spireid}}.jpg">
             </div>
             <div id="drawerName">{{fname}} {{lname}}</div>
           </a>
