Fixed schedule button on home page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -135,7 +135,7 @@
             <li>
               <a href="/class?classid={{this.classid}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
               <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
-              <a href="/group/schedule?classid={{this.classid}}"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
+              <a href="/class?classid={{this.classid}}"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
               <a href="/class/delete?classid={{this.classid}}"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
 
             </li>
