--- a/public/css/index.css
+++ b/public/css/index.css
@@ -101,7 +101,7 @@
   float: left;
   width: 13%;
   height: 130px;
-  background-color: #4CAF50;
+  background-color: #595959;
 }
 
 #classname p2{
