--- a/public/css/index.css
+++ b/public/css/index.css
@@ -53,7 +53,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -61,7 +61,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -69,7 +69,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -77,7 +77,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -85,7 +85,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -93,7 +93,7 @@
   font-size: 15px;
   color: white;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 55px;
   padding-left: 1%;
 }
 
@@ -101,7 +101,7 @@
   float: left;
   width: 13%;
   height: 130px;
-  background-color: #4CAF50;
+  background-color: #595959;
 }
 
 #classname p2{
@@ -205,11 +205,14 @@
 
 #addclass{
   float: right;
-  padding: 0.9%;
+  padding: 0.65%;
 }
 
 #addclassdropdown{
   display: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
 }
 
 
