Added post details page

--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -26,22 +26,28 @@
       <div id="panel1">
         <center> <div id="form">
           <p>{{message}}</p>
-           <form method="post" action="/user/register">
-              <select name="year">
-                <option value="freshman">Freshman</option>
-                <option value="sophomore">Sophomore</option>
-                <option value="junior">Junior</option>
-                <option value="senior">Senior</option>
-              </select><br>
-              <input type="text" name="fname" placeholder="first name" required><br> 
-              <input type="text" name="lname" placeholder="last name" required><br>
-              <input type="text" name="major" placeholder="major/concentration" required><br>  
-              <input type="text" name="email" placeholder="email" required><br> 
-              <input type="password" name="pass" placeholder="password" required><br>
-              <input type="text" name="spireid" placeholder="spire id" required><br>
-              <input type="date" name="dob" required><br>
-              <button class="btn">Sign Up</button>
-           </form>
+          <form action="/pictures/upload" method="POST" enctype="multipart/form-data">
+            Select an image to upload:
+            <input type="file" name="image"> 
+            <input type="submit" value="Upload Image">
+          </form>
+
+          <form method="post" action="/user/register">
+            <select name="year">
+              <option value="freshman">Freshman</option>
+              <option value="sophomore">Sophomore</option>
+              <option value="junior">Junior</option>
+              <option value="senior">Senior</option>
+            </select><br>
+            <input type="text" name="fname" placeholder="first name" required><br> 
+            <input type="text" name="lname" placeholder="last name" required><br>
+            <input type="text" name="major" placeholder="major/concentration" required><br>  
+            <input type="text" name="email" placeholder="email" required><br> 
+            <input type="password" name="pass" placeholder="password" required><br>
+            <input type="text" name="spireid" placeholder="spire id" required><br>
+            <input type="date" name="dob" required><br>
+            <button class="btn">Sign Up</button>
+          </form>
         </center>
       </div>
     </div>
