--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <!-- {{#if loggedIn}} -->
+    <style>
+      #prof {
+        display: none;
+      }
+
+      #onlyWhenLoggedIn {
+        display: none;
+      }
+    </style>
+  <!-- {{/if}} -->
+
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
@@ -70,7 +82,6 @@
           </div>
         </ul>
       </div>
-
 
       <div id="panel4">
         <ul id="test">
