link to class page on block instead of just class name

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -169,3 +169,18 @@ p4{
   padding-top: 5%;
   font-size: 2em;
 }
+
+/*#bottomDrawer{
+	background-color: white;
+	height: 280px;
+	background-image: url(/imgs/logo.png);
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 10% 85%; 
+    background-size: 225px 160px;
+}*/
+
+
+
+
+
